--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<div id = "gameContainer">
+	<section id = "gameContainer">
 		<div class = "sRow">
 			<div class = "green" id = "sGreen"><audio id="gAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio></div>
 			<div class = "red" id = "sRed"><audio id="rAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio></div>
@@ -23,9 +24,11 @@
 				<div id = 'counter'><span id ="countCon">ROUND </span> <span id="count">1</count></div>
 			</div>
 		</div>
-	</div>
-	
-<script type="text/javascript" src="assets/js/libs/jquery.js"></script>
-<script type="text/javascript" src="assets/js/simon.js"></script>
+	</section>
+	<footer>
+		<p>A project coded & designed by <a href="http://www.jeremyantonoff.com">Jeremy&nbsp;Antonoff</a></p>
+	</footer>
+	<script type="text/javascript" src="assets/js/libs/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/simon.js"></script>
 </body>
 </html>
