add generic class for buttons and change styling + font

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 	<section id = "gameContainer">
 		<div class = "sRow">
-			<div class = "green" id = "sGreen"><audio id="gAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio></div>
-			<div class = "red" id = "sRed"><audio id="rAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio></div>
+			<div class = "game-button green" id = "sGreen"><audio id="gAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio></div>
+			<div class = "game-button red" id = "sRed"><audio id="rAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio></div>
 		</div>
 		<div class = "sRow">
-			<div class = "yellow" id = "sYellow"><audio id="yAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio></div>
-			<div class = "blue" id = "sBlue"><audio id="bAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio></div>
+			<div class = "game-button yellow" id = "sYellow"><audio id="yAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio></div>
+			<div class = "game-button blue" id = "sBlue"><audio id="bAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio></div>
 		</div>
 		<div id = "sControls">
 			<div class = "sContent">
